welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:16: error: type mismatch;
 found   : Unit
 required: Boolean
			if (estFaceMur) { droite() }
                                                ^SnakeBuggle:17: error: type mismatch;
 found   : Unit
 required: Boolean
			else { }
                             ^